Fix main-side and trending-card overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,10 @@ main {
     padding: 1rem;
     /* flex: .7; */
     width: 20%;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .main-side h3 {
@@ -266,19 +268,16 @@ main {
     display: grid;
     grid-template: repeat(3, 60px)/ repeat(1, calc(100%));
     align-items: center;
-    /* justify-items: center; */
     row-gap: 1rem;
 }
 
-.news{
+.news {
     padding: 1rem 0;
 }
 
-.news:nth-child(n+2)  {
+.news:nth-child(n+2) {
     border-top: 1px solid var(--main-text);
-   
 }
-
 
 .news p:first-child {
     font-weight: 600;
@@ -293,17 +292,26 @@ main {
 
 #trend-card {
     display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(4, auto);
-    justify-items: center;
+    grid-template-columns: repeat(1, calc(28%)) repeat(1, calc(68%));
+    grid-template-rows: repeat(4, calc(100%));
     align-items: center;
     overflow-y: auto;
     scrollbar-width: thin;
+    row-gap: 1rem;
+    column-gap: .3rem;
 }
 
 #trend-card p,
 .news p {
     margin: 0;
+}
+/* #trend-card div{
+    justify-self: start;
+} */
+#trend-card p {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 #trend-card p:first-child {
